add verl submodule and updated configs

--- a/training/evaluations/inter_generalisation/algorithmic.yaml
+++ b/training/evaluations/inter_generalisation/algorithmic.yaml
@@ -5,11 +5,12 @@
 # inter_algebra_qwen_3b_500 (original + 500 GRPO steps on algebra RG data)
 # inter_logic_qwen_3b_400 (original + 400 GRPO steps on logic RG data)
 
-model_path: ../models/inter_logic_qwen_3b_400  # Change to the model to be evaluated
+model_path: /mnt/lustre/home/bethge/bkr261/projects/reasoning-gym/training/algorithmic_qwen_3  # Change to the model to be evaluated
 
 max_tokens: 2048  # From max_response_length in training config
 top_p: 0.9  # From rollout top_p
 temperature: 0.6  # Lower temperature for more focused responses
+dtype: auto
 
 developer_prompt: DeepSeekZero
 developer_role: system
